--- a/kcf-master/CMakeLists.txt
+++ b/kcf-master/CMakeLists.txt
@@ -24,13 +24,13 @@ add_executable(kcf_vot main_vot.cpp vot.hpp)
 target_link_libraries(kcf_vot ${OpenCV_LIBS} kcf)
 
 # Try to find TraX header and library ...
-FIND_PACKAGE(trax REQUIRED COMPONENTS core opencv)
-IF (trax_FOUND)
-    MESSAGE(STATUS "Trax protocol found: building kcf_trax")
-    INCLUDE_DIRECTORIES(${TRAX_INCLUDE_DIRS})
-    LINK_DIRECTORIES(${TRAX_LIBRARY_DIRS})
+# FIND_PACKAGE(trax REQUIRED COMPONENTS core opencv)
+# IF (trax_FOUND)
+#    MESSAGE(STATUS "Trax protocol found: building kcf_trax")
+#    INCLUDE_DIRECTORIES(${TRAX_INCLUDE_DIRS})
+#    LINK_DIRECTORIES(${TRAX_LIBRARY_DIRS})
 
-    add_executable(kcf_trax main_trax.cpp)
-    target_link_libraries(kcf_trax ${OpenCV_LIBS} kcf ${TRAX_LIBRARIES})
-ENDIF()
+#    add_executable(kcf_trax main_trax.cpp)
+#    target_link_libraries(kcf_trax ${OpenCV_LIBS} kcf ${TRAX_LIBRARIES})
+# ENDIF()
 
